# src/controllers/AprController/IApr.ts
@@ -1,0 +1,5 @@
+
+export interface IGetTownInfo {
+  county?: string
+  town?: string
+}
